--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-28 [看看王岐山 想想温家宝](/articles/rfi/1030979.md)
+
 4-28 [假如习近平给赵婷打电话](/articles/rfi/1030980.md)
 
 4-28 [印度精英逃离印度， 欧洲国家限制印度旅客入境](/articles/rfi/1030981.md)
@@ -598,6 +600,4 @@
 4-23 [印尼加紧搜寻失联潜舰 氧气可撑到24日凌晨 – 法国国际广播电台 - RFI](/articles/rfi/1031277.md)
 
 4-23 [欧洲央行维持史上最低利率 购债速度不变 – 法国国际广播电台 - RFI](/articles/rfi/1031278.md)
-
-4-22 [气候峰会登场 拜登吁紧急行动宣布美2030减排5成 – 法国国际广播电台 - RFI](/articles/rfi/1031279.md)
 
