--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-28 [下元沉思集 | 千呼万唤“不出来”的第七次人口普查数据，有何难言之隐？](/articles/cdt/383211.md)
+
 4-28 [Matters | 大兔：人一世物一世，我们害怕但勇敢地继续尝试](/articles/cdt/383212.md)
 
 4-27 [【网络民议】为什么有人看到出生率降低觉得很爽？](/articles/cdt/383219.md)
@@ -598,6 +600,4 @@
 3-28 [江湖眼 | H&M事件的背后，事关许多工人的饭碗](/articles/cdt/384450.md)
 
 3-28 [南方找北 | 最该抵制的是蠢货！](/articles/cdt/384458.md)
-
-3-28 [品葱 | 本人亲身经历：南疆，一个真实的1984世界](/articles/cdt/384461.md)
 
