--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-2 [委内瑞拉通膨严重 调薪3倍不够买一公斤肉 – 法国国际广播电台 - RFI](/articles/rfi/1030666.md)
+
+5-2 [因疫情停驶4个多月 义大利歌诗达邮轮复航 – 法国国际广播电台 - RFI](/articles/rfi/1030667.md)
+
+5-2 [曾获奥斯卡最佳女配角奖 奥林匹亚杜卡琪斯辞世 – 法国国际广播电台 - RFI](/articles/rfi/1030668.md)
+
 5-2 [美军印太司令上任同一天 美国防长称未来大战将完全不同 - 要闻分析](/articles/rfi/1030669.md)
 
 5-2 [美国发布旅游禁令，下周二起禁止印度旅客入境](/articles/rfi/1030670.md)
@@ -594,10 +600,4 @@
 4-28 [林郑月娥主持电视节目介绍选委会 被批官官勾结](/articles/rfi/1030964.md)
 
 4-28 [拜登首场国会演说将登场 重点聚焦抗疫、改革 – 法国国际广播电台 - RFI](/articles/rfi/1030965.md)
-
-4-28 [篮网击败暴龙 拿下NBA东区首张季后赛门票 – 法国国际广播电台 - RFI](/articles/rfi/1030966.md)
-
-4-28 [黄金周将至投资人逢低买进 日股小幅收高 – 法国国际广播电台 - RFI](/articles/rfi/1030967.md)
-
-4-28 [美下令非必要人员离开驻喀布尔大使馆 – 法国国际广播电台 - RFI](/articles/rfi/1030968.md)
 
