--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-2 [“东升西降”？美国百日新象问你：谁说的？](/articles/voa/1041092.md)
+
 5-2 [伊朗核问题谈判据报取得进展](/articles/voa/1041093.md)
 
 5-2 [缅甸民众继续游行，抗议军政府统治](/articles/voa/1041094.md)
@@ -598,6 +600,4 @@
 4-20 [新时代来临 卡内尔成为几十年来首位不姓卡斯特罗的古巴最高领导人](/articles/voa/1041390.md)
 
 4-20 [美军撤离阿富汗后是否担心中国派兵？五角大楼：阿富汗主权应得到尊重](/articles/voa/1041391.md)
-
-4-20 [美众院通过决议谴责北京侵蚀香港法治 佩洛西：聚焦追究中国责任](/articles/voa/1041392.md)
 
