--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-2 [挺总统比防疫重要 巴西数千人群聚示威没在怕 – 法国国际广播电台 - RFI](/articles/rfi/1030665.md)
+
 5-2 [委内瑞拉通膨严重 调薪3倍不够买一公斤肉 – 法国国际广播电台 - RFI](/articles/rfi/1030666.md)
 
 5-2 [因疫情停驶4个多月 义大利歌诗达邮轮复航 – 法国国际广播电台 - RFI](/articles/rfi/1030667.md)
@@ -598,6 +600,4 @@
 4-28 [中国人口下降 爆不足14亿](/articles/rfi/1030963.md)
 
 4-28 [林郑月娥主持电视节目介绍选委会 被批官官勾结](/articles/rfi/1030964.md)
-
-4-28 [拜登首场国会演说将登场 重点聚焦抗疫、改革 – 法国国际广播电台 - RFI](/articles/rfi/1030965.md)
 
