--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-2 [不当“宅男” 航母山东舰编队赴南海训练](/articles/dw/1042674.md)
+
+5-2 [中国大陆男子偷渡台湾自称投奔自由](/articles/dw/1042675.md)
+
 5-2 [福建将放宽两岸隔离措施 两岸网民均表强烈不满](/articles/dw/1042676.md)
 
 5-2 [禁止本国公民从印度返国 澳出台最严格入境禁令](/articles/dw/1042677.md)
@@ -596,8 +600,4 @@
 4-15 [为国际气候峰会做铺垫　克里抵华访问](/articles/dw/1042972.md)
 
 4-15 [欧盟国家同意引入新冠疫苗接种证](/articles/dw/1042973.md)
-
-4-15 [加拿大国会支持HFX论坛授奖蔡英文](/articles/dw/1042974.md)
-
-4-15 [中国女权运动再遭打压 运动人士忧遭「政治污名化」](/articles/dw/1042975.md)
 
