--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-7 [美军司令官：中国威胁也可能来自大西洋](/articles/voa/1040977.md)
+
+5-7 [新申请失业救济的美国人上周大幅减少](/articles/voa/1040978.md)
+
+5-7 [美参议院一委员会将审议一项与中国进行科技竞争的重大法案](/articles/voa/1040979.md)
+
 5-7 [美军部署印太信息战部队 应对北京的宣传攻势](/articles/voa/1040980.md)
 
 5-7 [黄之锋等4名社运人士参与去年六四未经批准集结 判囚4至10个月](/articles/voa/1040981.md)
@@ -594,10 +600,4 @@
 4-24 [流散海外港人拒绝被遗忘 呼吁积极保存身份持续推动国际线](/articles/voa/1041275.md)
 
 4-24 [拜登总统宣扬抗击气候变化的经济益处](/articles/voa/1041276.md)
-
-4-24 [香港民调: 10大政团评分全部不合格 国安法冲击泛民政党难凝聚民意](/articles/voa/1041277.md)
-
-4-24 [英情报官员警告：中国可能会主导关键技术控制全球操作系统](/articles/voa/1041278.md)
-
-4-24 [2020年中国基督徒惨遭迫害，从教堂到墓地 从生者到逝者](/articles/voa/1041279.md)
 
