--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-7 [伊朗6月选举 美官员：核协议有可能在那之前恢复 – 法国国际广播电台 - RFI](/articles/rfi/1030372.md)
+
 5-7 [北京叫停“中澳战略经济对话”，会对贸易产生影响吗？ - 法国世界报](/articles/rfi/1030373.md)
 
 5-7 [原材料：气候目标之挑战](/articles/rfi/1030374.md)
@@ -598,6 +600,4 @@
 5-2 [美国发布旅游禁令，下周二起禁止印度旅客入境](/articles/rfi/1030670.md)
 
 5-2 [传朝鲜万名学生自首求减刑 只因违禁看韩国戏剧](/articles/rfi/1030671.md)
-
-5-2 [法国疫情趋缓     重症连续第五天下降](/articles/rfi/1030672.md)
 
