--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [白宫要义: 拜登: 别让中国抢美国饭碗，加强投资买美国货](/articles/voa/1040971.md)
+
 5-7 [如何避免美中为台湾而战？美学者十年后再提弃台论 被讽应“改行”](/articles/voa/1040972.md)
 
 5-7 [脸书继续封禁，特朗普将另辟蹊径](/articles/voa/1040973.md)
@@ -598,6 +600,4 @@
 4-24 [美国疾控中心顾问建议恢复使用强生新冠疫苗](/articles/voa/1041269.md)
 
 4-24 [美国国际宗教自由委员会再次呼吁北京释放达赖喇嘛选定的班禅喇嘛](/articles/voa/1041270.md)
-
-4-24 [民调：大多数大学生选民赞成拜登工作表现](/articles/voa/1041271.md)
 
