--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-7 [没了外国游客，贝加尔湖迎来“俄罗斯季”](/articles/nyt/1046891.md)
+
 5-6 [洛杉矶佛教徒举办法事，为种族仇恨“疗伤”](/articles/nyt/1046892.md)
 
 5-6 [他们以为朝鲜是社会主义天堂，结果却去往“地狱”](/articles/nyt/1046893.md)
@@ -598,6 +600,4 @@
 2-9 [从非法进口对讲机到偷海报：威权国家里的荒诞“罪行”](/articles/nyt/1047189.md)
 
 2-9 [特朗普二次弹劾案：前总统能接受审判吗？](/articles/nyt/1047190.md)
-
-2-9 [是时候信任中国和俄罗斯的疫苗了](/articles/nyt/1047191.md)
 
