--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+5-7 [每周时事分析：欧盟“暂停”推动批准中欧投资协定的逻辑](/articles/ft/1045659.md)
+
+5-7 [货币充裕时代，为何资本不足？](/articles/ft/1045660.md)
+
+5-7 [为什么在证券投资基金的治理构架中没有董事会的一席之地？](/articles/ft/1045661.md)
+
 5-6 [英法捕鱼权争端升级 英国派出军舰](/articles/ft/1045662.md)
 
 5-6 [美国支持豁免新冠疫苗专利 中国疫苗股受冲击](/articles/ft/1045663.md)
@@ -594,10 +600,4 @@
 3-2 [郭树清：很担心国外金融市场的泡沫](/articles/ft/1045957.md)
 
 3-2 [别样春节之后，中国经济走向何方](/articles/ft/1045958.md)
-
-3-2 [蔚来警告：全球芯片短缺将冲击电动汽车行业](/articles/ft/1045959.md)
-
-3-2 [蚂蚁集团有限分享数据](/articles/ft/1045960.md)
-
-3-2 [可持续投资成为主流投资方式](/articles/ft/1045961.md)
 
