--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-7 [“你是不是像这只狗狗一样？”美国驻华使馆微博用词引争议](/articles/nyt/1046888.md)
+
 5-7 [香港用打击“假新闻”进一步收紧媒体控制](/articles/nyt/1046889.md)
 
 5-7 [家居绿植美学：把大自然带回家](/articles/nyt/1046890.md)
@@ -598,6 +600,4 @@
 2-10 [WHO公布武汉调查初步发现，北京赢得公关胜利](/articles/nyt/1047186.md)
 
 2-10 [Clubhouse被封背后：对话与人性穿透数字高墙](/articles/nyt/1047187.md)
-
-2-10 [简报：中国封禁Clubhouse；世卫专家分享新冠溯源发现](/articles/nyt/1047188.md)
 
