--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-7 [共和党新锐支持特朗普关于大选结果的不实说法](/articles/ft/1045658.md)
+
 5-7 [每周时事分析：欧盟“暂停”推动批准中欧投资协定的逻辑](/articles/ft/1045659.md)
 
 5-7 [货币充裕时代，为何资本不足？](/articles/ft/1045660.md)
@@ -598,6 +600,4 @@
 3-3 [TikTok如果撤离印度将意味着什么？](/articles/ft/1045956.md)
 
 3-2 [郭树清：很担心国外金融市场的泡沫](/articles/ft/1045957.md)
-
-3-2 [别样春节之后，中国经济走向何方](/articles/ft/1045958.md)
 
