--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-7 [六四报导提案遭否决 港台《铿锵集》监製离职](/articles/dw/1042607.md)
+
+5-7 [台盼澳协助抵御中国攻击  澳总理：捍卫区域自由](/articles/dw/1042608.md)
+
 5-7 [香港5青年涉颠覆国家政权遭捕](/articles/dw/1042609.md)
 
 5-7 [疫苗专利谈判曠日費時 中国立场不明](/articles/dw/1042610.md)
@@ -596,8 +600,4 @@
 4-19 [2034年或是更近 ？美海军高官出书警防中美开战](/articles/dw/1042905.md)
 
 4-19 [媒体：蚂蚁正寻找让马云出售持股的方式](/articles/dw/1042906.md)
-
-4-19 [客座评论：欧盟的多层次中国战略与中欧投资协议之命运](/articles/dw/1042907.md)
-
-4-19 [牛津启动新冠染疫者再度感染研究项目](/articles/dw/1042908.md)
 
