--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-7 [政变三个月后，缅甸回归恐怖统治](/articles/nyt/1046886.md)
+
 5-7 [两名亚裔女性在旧金山市中心遭遇持刀男子袭击](/articles/nyt/1046887.md)
 
 5-7 [“你是不是像这只狗狗一样？”美国驻华使馆微博用词引争议](/articles/nyt/1046888.md)
@@ -598,6 +600,4 @@
 2-10 [在俄罗斯，穿红色有了新意义](/articles/nyt/1047184.md)
 
 2-10 [七个问题，快速了解“天问一号”的火星之旅](/articles/nyt/1047185.md)
-
-2-10 [WHO公布武汉调查初步发现，北京赢得公关胜利](/articles/nyt/1047186.md)
 
