--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-12 [【图说天朝】新时代的道路以目：“隔空投送”爆料](/articles/cdt/382686.md)
+
 5-11 [疾痛的隐喻 | 来看看过去一年坏了多少监控](/articles/cdt/382693.md)
 
 5-11 [【404文库】数据归集处｜人口之惑](/articles/cdt/382697.md)
@@ -598,6 +600,4 @@
 4-9 [宋金波 | 金德强的生命之火这样熄灭，总要有人问个为什么](/articles/cdt/383981.md)
 
 4-9 [明明德 | 一个评论，新疆，棉花](/articles/cdt/383987.md)
-
-4-9 [端传媒 | 肖美丽事件：“港独”围猎与“性别恐怖主义”（节选）](/articles/cdt/383988.md)
 
