--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [又同中国有关 俄知名海军设计局负责人被判刑](/articles/voa/1040880.md)
+
+5-12 [路透社：鉴于美中关系不确定性 特斯拉改变在中国的发展计划](/articles/voa/1040881.md)
+
 5-11 [澳大利亚大幅增加国防安全投资 因应中国威胁增加](/articles/voa/1040882.md)
 
 5-11 [陈玫、蔡伟“寻滋”案庭审结束，刑期稍晚宣判](/articles/voa/1040883.md)
@@ -596,8 +600,4 @@
 4-28 [民调：拜登上任后盟友对美国好感度上升，中国却对美国好感度急剧下降](/articles/voa/1041178.md)
 
 4-28 [专家：中国3艘军舰列装 意在与美竞争夺取制海权](/articles/voa/1041179.md)
-
-4-28 [美国总统拜登执政届满100天 今晚发表重要讲话](/articles/voa/1041180.md)
-
-4-28 [人口不到14亿？中国将报告大跃进以来首次人口下降](/articles/voa/1041181.md)
 
