--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [时事大家谈: 美国支持豁免新冠疫苗专利保护，北京为何作壁上观？](/articles/voa/1040876.md)
+
 5-12 [美日法澳首次联合军演 应对中国咄咄逼人的行为](/articles/voa/1040877.md)
 
 5-12 [中国生产领域通胀数据4月飙升，全球通胀担忧突然加重](/articles/voa/1040878.md)
@@ -598,6 +600,4 @@
 4-29 [时事大家谈: 赵婷获奥斯卡大奖，”中国骄傲“为何被全网封杀？](/articles/voa/1041174.md)
 
 4-29 [默克尔促北京恢复人权对话，李克强：不要干涉中国内政](/articles/voa/1041175.md)
-
-4-29 [香港通过入境修订条例 出入境自由化为乌有？](/articles/voa/1041176.md)
 
