--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-12 [成都中学生坠亡引众怒   警方打压已成白色恐怖](/articles/rfa/1045623.md)
+
 5-12 [美国进入国家紧急状态？  多个中国媒体出现相关谣言](/articles/rfa/1045624.md)
 
 5-12 [电视剧贩卖生育焦虑   难怪中国人不愿生娃](/articles/rfa/1045625.md)
@@ -598,6 +600,4 @@
 4-8 [安徽“猪头人身”漫画作者张冬宁再遭判囚](/articles/rfa/1045921.md)
 
 4-8 [瑞丽市委书记因疫情被撤职    中国疫苗缺货多地暂停第二针](/articles/rfa/1045922.md)
-
-4-8 [台湾立委声援缅甸抗争者 有缅甸人咨询来台寻庇护](/articles/rfa/1045923.md)
 
