--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-12 [中国的荣誉保全了, 中共不需要宣布人口减少了！ - 法国世界报](/articles/rfi/1030049.md)
+
+5-12 [香港政府首次购买奥运会电视转播权](/articles/rfi/1030050.md)
+
+5-12 [中国鼓励生育，但新疆穆斯林除外？ - 要闻分析](/articles/rfi/1030051.md)
+
 5-12 [王夫葬礼后首次露面      英女王主持国会开议大典](/articles/rfi/1030052.md)
 
 5-12 [英国着手修法     打击外国间谍活动](/articles/rfi/1030053.md)
@@ -594,10 +600,4 @@
 5-7 [气象灾害和病虫害可能对农业造成影响 李克强提让农民有钱赚](/articles/rfi/1030347.md)
 
 5-7 [欧盟官员首说欧中投资协定不算协定更像是意向](/articles/rfi/1030348.md)
-
-5-7 [G20承诺全额资助世卫购买新冠疫苗及药物的计划](/articles/rfi/1030349.md)
-
-5-7 [中国称长征五号B火箭残骸大部分会销毁 危害概率极低](/articles/rfi/1030350.md)
-
-5-7 [中国4月出口优于预期 进口成长创10年最佳 – 法国国际广播电台 - RFI](/articles/rfi/1030351.md)
 
