--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [五角大楼表示正稳步撤离阿富汗但拒绝披露目前仍有多少美军留驻](/articles/voa/1040872.md)
+
+5-12 [白宫要义: 白宫谴责对以色列的攻击，强调以巴须获得公平对待](/articles/voa/1040873.md)
+
 5-12 [拜登政府宣布批准在新英格兰地区海岸附近建立大型近海风力发电场](/articles/voa/1040874.md)
 
 5-12 [日本支持台湾以观察员身份参加世界卫生大会](/articles/voa/1040875.md)
@@ -596,8 +600,4 @@
 4-29 [美国海豹突击队转型，集中面对中俄威胁](/articles/voa/1041170.md)
 
 4-29 [印度疫情下“四国疫苗伙伴”能否有效对抗北京影响？](/articles/voa/1041171.md)
-
-4-29 [参加阿波罗11号登月的美国宇航员柯林斯逝世 享年90岁](/articles/voa/1041172.md)
-
-4-29 [香港立法会三读通过入境条例修订 民间组织批闭关锁港或变大监狱](/articles/voa/1041173.md)
 
