--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-12 [【网络民议】成都四十九中学生坠亡事件持续发酵  家长与群众聚集校外要真相遭警方维稳（含现场视频）](/articles/cdt/382675.md)
+
 5-12 [财主的阵地 | 真搞不懂统计局的人口普查数据！](/articles/cdt/382676.md)
 
 5-12 [果壳 | 监控视频真的那么容易丢失吗？](/articles/cdt/382678.md)
@@ -598,6 +600,4 @@
 4-9 [Weifeng Yang｜翻译：汉族人是中国的白人吗？](/articles/cdt/383973.md)
 
 4-9 [【图说天朝】寒假十课](/articles/cdt/383975.md)
-
-4-9 [全现在 | 3000万卡车司机的“黑匣子”困局](/articles/cdt/383979.md)
 
