--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-12 [报道：拜登挑选前芝加哥市长伊曼纽尔担任驻日大使](/articles/voa/1040870.md)
+
+5-12 [新疆太阳能产业或成为下一个“新疆棉”：美中在气候变化领域是否还有合作的必要？](/articles/voa/1040871.md)
+
 5-12 [五角大楼表示正稳步撤离阿富汗但拒绝披露目前仍有多少美军留驻](/articles/voa/1040872.md)
 
 5-12 [白宫要义: 白宫谴责对以色列的攻击，强调以巴须获得公平对待](/articles/voa/1040873.md)
@@ -596,8 +600,4 @@
 4-29 [拜登总统提名台湾出生的徐若冰为国防部副部长](/articles/voa/1041168.md)
 
 4-29 [拜登将对国会两院发表演说 提议大规模支付扶持儿童和家庭](/articles/voa/1041169.md)
-
-4-29 [美国海豹突击队转型，集中面对中俄威胁](/articles/voa/1041170.md)
-
-4-29 [印度疫情下“四国疫苗伙伴”能否有效对抗北京影响？](/articles/voa/1041171.md)
 
