--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [塔利班发动袭击威胁阿富汗省会](/articles/voa/1040602.md)
+
+5-24 [美韩“洪水级”千亿投资潮或将淹没中国芯片自主路](/articles/voa/1040603.md)
+
 5-24 [欧盟要求白俄罗斯解释飞机改道、拘留记者的问题](/articles/voa/1040604.md)
 
 5-24 [以色列-哈马斯停火持续第三天 布林肯将前往巴以地区](/articles/voa/1040605.md)
@@ -596,8 +600,4 @@
 5-11 [FBI确认“黑暗面”勒索软件对殖民管道网络遇袭负责 白宫或就是否支付赎金提供建议](/articles/voa/1040900.md)
 
 5-11 [时事大家谈: 习近平与巴赫通电话，冬奥会能否缓解习近平政治困局？](/articles/voa/1040901.md)
-
-5-11 [香港支联会街站派蜡烛坚持悼念六四 吁市民两手准备烛光遍地开花](/articles/voa/1040902.md)
-
-5-11 [拜登参加北约东欧成员国峰会 讨论乌克兰安全问题及中国影响](/articles/voa/1040903.md)
 
