--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [美媒：武汉病毒研究所人员2019年11月曾就医](/articles/dw/1042316.md)
+
 5-24 [墙外文摘：台湾防疫，优势如何战胜劣势？](/articles/dw/1042317.md)
 
 5-23 [为抓捕反对派 白俄罗斯拦截飞越领空客机](/articles/dw/1042318.md)
@@ -598,6 +600,4 @@
 5-6 [中国驳回对其运载火箭残骸的安全警告](/articles/dw/1042614.md)
 
 5-6 [德语媒体：默克尔总理的败笔](/articles/dw/1042615.md)
-
-5-6 [复旦开匈牙利分校 中国版“特洛伊木马”？](/articles/dw/1042616.md)
 
