--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-24 [简报：袁隆平去世引发全国性哀悼；白俄罗斯拦截欧洲客机抓捕记者](/articles/nyt/1046833.md)
+
 5-24 [华人还有戴口罩的自由吗？](/articles/nyt/1046834.md)
 
 5-21 [拜登和文在寅会晤在即：朝核问题怎么办？](/articles/nyt/1046835.md)
@@ -598,6 +600,4 @@
 3-2 [“释放政治犯”：香港数百人抗议民主派被捕](/articles/nyt/1047131.md)
 
 3-2 [为什么习近平仍对香港穷追不舍？](/articles/nyt/1047132.md)
-
-3-2 [简报：中国加快推进数字人民币；香港罕见再现抗议活动](/articles/nyt/1047133.md)
 
