--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-24 [纽约市骑士为自行车祈福之余自求多福](/articles/voa/1040601.md)
+
 5-24 [塔利班发动袭击威胁阿富汗省会](/articles/voa/1040602.md)
 
 5-24 [美韩“洪水级”千亿投资潮或将淹没中国芯片自主路](/articles/voa/1040603.md)
@@ -598,6 +600,4 @@
 5-11 [世卫组织：印度出现的新冠病毒变种令全球关注](/articles/voa/1040899.md)
 
 5-11 [FBI确认“黑暗面”勒索软件对殖民管道网络遇袭负责 白宫或就是否支付赎金提供建议](/articles/voa/1040900.md)
-
-5-11 [时事大家谈: 习近平与巴赫通电话，冬奥会能否缓解习近平政治困局？](/articles/voa/1040901.md)
 
