--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+6-2 [唐吉田赴日陪护女儿  福州机场出境被拦截](/articles/rfa/1045434.md)
+
+6-2 [习近平重提“说好中国故事”  分析:为洗白疫情责任掌控内宣](/articles/rfa/1045435.md)
+
+6-2 [港府全方位阻止港人悼念   六四纪念馆被逼关闭](/articles/rfa/1045436.md)
+
 6-2 [微博大V“辣笔小球” 因“诋毁英雄烈士”罪被判入狱八个月](/articles/rfa/1045437.md)
 
 6-2 [中国“三孩时代”年轻人的纠结：一个都不想生](/articles/rfa/1045438.md)
@@ -594,10 +600,4 @@
 4-29 [继芯片 “大跃进”后   国产电动车 “大跃进”如箭在弦](/articles/rfa/1045732.md)
 
 4-29 [为配合百年党庆宣传    禁完网络论坛再禁脱口秀](/articles/rfa/1045733.md)
-
-4-29 [中宣部学习会淡化文革  忠字舞民间回魂?](/articles/rfa/1045734.md)
-
-4-29 [美中必有一战？专家：须降低战略竞争风险](/articles/rfa/1045735.md)
-
-4-29 [中国人口或现六十年来首下降       “内循环”恐成“内坍塌”](/articles/rfa/1045736.md)
 
