--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-11 [宝马集团在中国银行间债市公开发行35亿熊猫债 开启欧洲企业先河--NAFMII](/articles/reuters/1036967.md)
+
 6-11 [韩国总统文在寅前往参加G7峰会 希望在气候和疫情问题上发挥更大作用](/articles/reuters/1036968.md)
 
 6-11 [香港修订电影检查员指引 如影片相当可能构成危害国家安全罪不宜上映](/articles/reuters/1036969.md)
@@ -598,6 +600,4 @@
 6-4 [投资者乐见拜登提议设定15%最低企业税率 放弃将企业税提高至28%](/articles/reuters/1037265.md)
 
 6-4 [白宫制定美国迅速与全球分享2,500万支新冠疫苗的计划](/articles/reuters/1037266.md)
-
-6-4 [独家：美国将勒索软件攻击提升到类似恐怖主义的优先地位--官员](/articles/reuters/1037267.md)
 
