--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-11 [立场新闻 | “生为维吾尔人就是罪” 一个新疆再教育营受害者的证词](/articles/cdt/381505.md)
+
 6-11 [【CDTV】歪脑 | “你有多少秘密，就有多少数据”——在大数据监控下做个永生的透明人](/articles/cdt/381508.md)
 
 6-11 [BBC | 中国制定《反外国制裁法》 应对美国“工具箱”的四个看点](/articles/cdt/381510.md)
@@ -598,6 +600,4 @@
 5-7 [【敏感词库】“上海迪士尼噗噗熊被打”禁转禁评](/articles/cdt/382871.md)
 
 5-7 [【404文库】《何以为家》导演自述：关于创作缘由、一点回应和许多感谢](/articles/cdt/382874.md)
-
-5-7 [极昼工作室 | 当北大博士成为外卖骑手](/articles/cdt/382888.md)
 
