--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-11 [禁令之下美国DNA设备仍在流入新疆](/articles/nyt/1046739.md)
+
 6-11 [中国通过《反外国制裁法》](/articles/nyt/1046740.md)
 
 6-11 [在悲伤中活下去：失去母亲的亚特兰大枪案遗属](/articles/nyt/1046741.md)
@@ -598,6 +600,4 @@
 3-26 [垃圾食品比酒精、烟草和毒品更易上瘾？](/articles/nyt/1047037.md)
 
 3-26 [巨轮阻塞航路，苏伊士运河“大堵船”或将持续数月](/articles/nyt/1047038.md)
-
-3-26 [“以强对强”：朝鲜试射导弹挑衅拜登政府](/articles/nyt/1047039.md)
 
