--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-11 [中国央行官员：建设数字人民币钱包生态 实现线上线下的全场景应用](/articles/reuters/1036964.md)
+
+6-11 [中国5月汽车销量同比降3.1%终结连13升 芯片短缺影响加剧--中汽协](/articles/reuters/1036965.md)
+
+6-11 [独家：欧洲央行要求德意志银行迅速物色董事长继任人选--消息](/articles/reuters/1036966.md)
+
 6-11 [宝马集团在中国银行间债市公开发行35亿熊猫债 开启欧洲企业先河--NAFMII](/articles/reuters/1036967.md)
 
 6-11 [韩国总统文在寅前往参加G7峰会 希望在气候和疫情问题上发挥更大作用](/articles/reuters/1036968.md)
@@ -594,10 +600,4 @@
 6-4 [英国和澳洲举行新一轮会谈 争取在6月中旬前达成贸易协议](/articles/reuters/1037262.md)
 
 6-4 [深圳盐田港笼罩疫情威胁 航运商警告塞港问题将持续](/articles/reuters/1037263.md)
-
-6-4 [美国总统拜登首次海外之行 将与英国、土耳其和俄罗斯领导人会晤](/articles/reuters/1037264.md)
-
-6-4 [投资者乐见拜登提议设定15%最低企业税率 放弃将企业税提高至28%](/articles/reuters/1037265.md)
-
-6-4 [白宫制定美国迅速与全球分享2,500万支新冠疫苗的计划](/articles/reuters/1037266.md)
 
