--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-11 [德澳举行2+2会谈：增强在印太地区合作、探讨中国问题](/articles/rfi/1028193.md)
+
+6-11 [国际特赦：中国迫害新疆维族 构成反人类罪 – 法国国际广播电台 - RFI](/articles/rfi/1028194.md)
+
 6-11 [中国热门叫车app滴滴申请在美国IPO – 法国国际广播电台 - RFI](/articles/rfi/1028195.md)
 
 6-11 [英国解封 4月经济成长2.3% – 法国国际广播电台 - RFI](/articles/rfi/1028196.md)
@@ -596,8 +600,4 @@
 6-6 [伦敦维吾尔法庭听取证词](/articles/rfi/1028491.md)
 
 6-6 [中国影音平台长短音频争议](/articles/rfi/1028492.md)
-
-6-6 [法网女单 齐丹塞珂晋级8强 – 法国国际广播电台 - RFI](/articles/rfi/1028493.md)
-
-6-6 [印度变异病毒袭英 传染率比前一波高40% – 法国国际广播电台 - RFI](/articles/rfi/1028494.md)
 
