--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-11 [国家在“做梦” 人民却“躺平”，中共一大警讯？](/articles/voa/1040198.md)
+
 6-11 [在美受追捧的News Break 能否不受中国政府控制？](/articles/voa/1040199.md)
 
 6-11 [拜登宣布再向世界捐赠5亿剂疫苗](/articles/voa/1040200.md)
@@ -598,6 +600,4 @@
 5-28 [中共认知作战的表与里 扰台防疫又推销疫苗？](/articles/voa/1040496.md)
 
 5-28 [中共高悬利剑 民企科技巨头噤若寒蝉](/articles/voa/1040497.md)
-
-5-28 [黎智英等香港民主派人士因参与未经批准集结被判监14到18个月](/articles/voa/1040498.md)
 
