--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-11 [国安法无所不在 香港加强电影审查](/articles/voa/1040197.md)
+
 6-11 [国家在“做梦” 人民却“躺平”，中共一大警讯？](/articles/voa/1040198.md)
 
 6-11 [在美受追捧的News Break 能否不受中国政府控制？](/articles/voa/1040199.md)
@@ -598,6 +600,4 @@
 5-28 [数据显示菲律宾大力加强对南中国海巡逻](/articles/voa/1040495.md)
 
 5-28 [中共认知作战的表与里 扰台防疫又推销疫苗？](/articles/voa/1040496.md)
-
-5-28 [中共高悬利剑 民企科技巨头噤若寒蝉](/articles/voa/1040497.md)
 
