--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [国际特赦组织：对新疆穆斯林大规模迫害构成危害人类罪](/articles/voa/1040194.md)
+
+6-11 [英国报告称香港国安法意在“大幅限制自由”](/articles/voa/1040195.md)
+
 6-11 [日本官员提及台湾出口误，中国官方穷追猛打不留情](/articles/voa/1040196.md)
 
 6-11 [国安法无所不在 香港加强电影审查](/articles/voa/1040197.md)
@@ -596,8 +600,4 @@
 5-28 [港版国安法引发出走潮 英国两月录得3.4万宗BNO签证申请](/articles/voa/1040492.md)
 
 5-28 [美英呼吁展开下阶段病毒溯源调查，世卫拟定调查计划](/articles/voa/1040493.md)
-
-5-28 [台湾单日新冠死亡病例创新高 日本或向台湾提供疫苗](/articles/voa/1040494.md)
-
-5-28 [数据显示菲律宾大力加强对南中国海巡逻](/articles/voa/1040495.md)
 
