--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-12 [中国赠1万AK-47步枪适合左撇子 厄瓜多尔决定继续用](/articles/rfi/1028167.md)
+
 6-12 [台湾犀牛妹远嫁日本  当地动物园盼促成好姻缘 – 法国国际广播电台 - RFI](/articles/rfi/1028168.md)
 
 6-12 [流媒体网飞（Netflix）为何一再缺席戛纳电影节 - 今日经济](/articles/rfi/1028169.md)
@@ -598,6 +600,4 @@
 6-7 [墨西哥选举 贩毒集团地盘紧张升高 – 法国国际广播电台 - RFI](/articles/rfi/1028465.md)
 
 6-7 [粤疫加剧：离穗者须证48小時未染疫 港澳收紧免检安排 已入澳者须再检测](/articles/rfi/1028466.md)
-
-6-7 [首战腿筋紧绷 哈登将缺席篮网公鹿第2战 – 法国国际广播电台 - RFI](/articles/rfi/1028467.md)
 
