--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-12 [七国集团峰会在“重建更加美好”气氛中开幕](/articles/voa/1040189.md)
+
+6-12 [甘肃超马悲剧调查结束 县委书记自杀、县长免职，27人被追责](/articles/voa/1040190.md)
+
 6-12 [布林肯与杨洁篪通电话就香港、新疆、疫情溯源、台湾、朝鲜等问题交换意见](/articles/voa/1040191.md)
 
 6-12 [七大工业国集团将向全球捐赠十亿剂新冠疫苗](/articles/voa/1040192.md)
@@ -596,8 +600,4 @@
 5-29 [杨恒均案审理结束择期宣判 澳外长指责中国“任意拘留”](/articles/voa/1040487.md)
 
 5-29 [中国试图修补中欧关系，欧洲四国外长应邀访中](/articles/voa/1040488.md)
-
-5-28 [白俄罗斯总统称将报复欧盟实施的任何制裁](/articles/voa/1040489.md)
-
-5-28 [德国承认在纳米比亚犯下种族灭绝，并提供巨额赔偿](/articles/voa/1040490.md)
 
