--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-21 [中国扩大打击加密货币挖矿 比特币价格跳水 – 法国国际广播电台 - RFI](/articles/rfi/1027665.md)
+
+6-21 [《苹果》可能本周六结业 员工可即日请辞](/articles/rfi/1027666.md)
+
+6-21 [中国疫苗接种破10亿剂 - 法国报纸摘要](/articles/rfi/1027667.md)
+
+6-21 [《苹果日报》，坐等取缔，何不流亡 - 美国专栏](/articles/rfi/1027668.md)
+
 6-21 [奈及利亚警察开枪滥射 酿5死4伤 – 法国国际广播电台 - RFI](/articles/rfi/1027669.md)
 
 6-21 [东奥主办单位：拟开放最多1万名观众入场 – 法国国际广播电台 - RFI](/articles/rfi/1027670.md)
@@ -592,12 +600,4 @@
 6-16 [拜登蒲亭日内瓦峰会  动员4000军警维安 – 法国国际广播电台 - RFI](/articles/rfi/1027963.md)
 
 6-16 [杜特蒂：绝不配合国际刑事法院调查菲国扫毒战 – 法国国际广播电台 - RFI](/articles/rfi/1027964.md)
-
-6-16 [美英法德防长举行四方会谈 美防长：欧洲四国集团](/articles/rfi/1027965.md)
-
-6-16 [美欧就长达17年航空补贴争端达成协议 暂停加征关税](/articles/rfi/1027966.md)
-
-6-16 [解放军军机28架次今入台空域 创公布统计以来架次纪录](/articles/rfi/1027967.md)
-
-6-16 [黎智英涉违国安法案延至7月27日再审](/articles/rfi/1027968.md)
 
