--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-21 [香港支联会副主席：国安法下港人不能委曲求全](/articles/voa/1040001.md)
+
+6-21 [朝鲜疑陷粮食危机 美特使提出与平壤方面接触](/articles/voa/1040002.md)
+
 6-21 [中国新冠疫苗国内接种超10亿 有效率在海外仍受质疑](/articles/voa/1040003.md)
 
 6-21 [矢板明夫：曾经以为中国最幸福](/articles/voa/1040004.md)
@@ -596,8 +600,4 @@
 6-7 [中国召集与东盟的特别外长会议 南中国海问题依然是关键](/articles/voa/1040299.md)
 
 6-7 [匈牙利首都市长发言反对建中国大学分校 北京“强烈抗议”](/articles/voa/1040300.md)
-
-6-7 [中国官员：解散或取缔香港支联会只是时间问题](/articles/voa/1040301.md)
-
-6-7 [哈里斯副总统出访危地马拉和墨西哥](/articles/voa/1040302.md)
 
