--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-21 [美赠台250万疫苗  立委：台湾政治疫情比实际疫情严重](/articles/rfa/1045275.md)
+
 6-21 [新冠疫苗接种逾10亿剂次   深圳等地万人排队核酸检测](/articles/rfa/1045276.md)
 
 6-21 [港府冻结壹传媒户口资金   董事会周五最后决定是否停刊](/articles/rfa/1045277.md)
@@ -598,6 +600,4 @@
 5-18 [环时斥美公共外交是颜色革命   外交危机升级](/articles/rfa/1045573.md)
 
 5-18 [上海疫苗受害者谭华疑服药自杀     友人: 目前无虞](/articles/rfa/1045574.md)
-
-5-18 [中国一季度离婚率大跌七成    “离婚冷静期”再引争议](/articles/rfa/1045575.md)
 
