--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-21 [俄罗斯和美国将讨论大使馆工作“正常化”--俄新社](/articles/reuters/1036663.md)
+
 6-21 [国际级银行驻香港机构要求员工返回办公室上班](/articles/reuters/1036664.md)
 
 6-21 [中国央行约谈工行、农行、支付宝等 要求识别并切断虚拟货币交易支付链](/articles/reuters/1036665.md)
@@ -598,6 +600,4 @@
 6-11 [中国股市在白酒和金融板块拖累下收跌 且为连续第二周收低](/articles/reuters/1036961.md)
 
 6-11 [汇市一周综述：美国通胀数据未能“激起千层浪” 美元难逃困境](/articles/reuters/1036962.md)
-
-6-11 [科大讯飞因输入法APP下架股价闪崩收跌6% 5月曾遭网信办通报](/articles/reuters/1036963.md)
 
