--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-21 [拒签“一中承诺书”，七名台湾驻港官员被迫返台](/articles/voa/1039999.md)
+
+6-21 [广东东莞发现两起新冠病毒感染 全市严防死堵展开防疫](/articles/voa/1040000.md)
+
 6-21 [香港支联会副主席：国安法下港人不能委曲求全](/articles/voa/1040001.md)
 
 6-21 [朝鲜疑陷粮食危机 美特使提出与平壤方面接触](/articles/voa/1040002.md)
@@ -596,8 +600,4 @@
 6-7 [布林肯表示将彻查新冠病毒源头 追究中国责任](/articles/voa/1040297.md)
 
 6-7 [专访媒体研究学者林慕莲谈中国重塑世界媒体](/articles/voa/1040298.md)
-
-6-7 [中国召集与东盟的特别外长会议 南中国海问题依然是关键](/articles/voa/1040299.md)
-
-6-7 [匈牙利首都市长发言反对建中国大学分校 北京“强烈抗议”](/articles/voa/1040300.md)
 
