--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-25 [美国制裁五家新疆太阳能企业    北京:  将作必要反应](/articles/rfa/1045229.md)
+
 6-25 [宁波外教杀人案引发对超国民待遇的愤怒](/articles/rfa/1045230.md)
 
 6-25 [《苹果日报》》停刊国际关注   美国总统拜登批评中国打压新闻自由](/articles/rfa/1045231.md)
@@ -598,6 +600,4 @@
 5-22 [立陶宛国会认定：中国对新疆维吾尔人犯下种族灭绝罪](/articles/rfa/1045527.md)
 
 5-22 [港府控台“粗暴干预香港事务”     台陆委会驳斥](/articles/rfa/1045528.md)
-
-5-22 [加拿大作家出书：中国当局在加涉洗钱、毒品和统战渗透](/articles/rfa/1045529.md)
 
