--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-25 [《苹果日报》停刊对香港意味着什么](/articles/nyt/1046681.md)
+
+6-25 [简报：《苹果日报》停刊对香港意味着什么；迈阿密公寓倒塌至少99人失踪](/articles/nyt/1046682.md)
+
 6-25 [杨安泽败选纽约市长，“华人参政梦”近了还是远了？](/articles/nyt/1046683.md)
 
 6-24 [“出走”的大象与一场中国互联网狂欢](/articles/nyt/1046684.md)
@@ -596,8 +600,4 @@
 4-12 [简报：阿里被罚182亿元；中国官员承认疫苗有效性较低](/articles/nyt/1046979.md)
 
 4-10 [简讯：菲利普亲王去世，享年99岁](/articles/nyt/1046980.md)
-
-4-9 [重拍版美剧《功夫》：更贴近李小龙心意的功夫片？](/articles/nyt/1046981.md)
-
-4-9 [食道癌患者迎来治疗新方案，可使无病生存时间翻倍](/articles/nyt/1046982.md)
 
