--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+6-25 [不想成猎物 瑞士信贷拟全面改革甚至考虑与瑞银合并](/articles/reuters/1036465.md)
+
+6-25 [标普确认中国评等A+/A-1 预料将维持强劲GDP增长](/articles/reuters/1036466.md)
+
+6-25 [滴滴出行40亿美元美国IPO获全额认购--消息人士](/articles/reuters/1036467.md)
+
 6-25 [中国重要财经新闻一周回顾](/articles/reuters/1036468.md)
 
 6-25 [滴滴出行IPO将助力中资企业赴美上市热潮](/articles/reuters/1036469.md)
@@ -594,10 +600,4 @@
 6-17 [焦点：美联储即将调整方向 但步伐将与金融危机后有所不同](/articles/reuters/1036763.md)
 
 6-17 [中国商务部：愿意继续扩大自中东欧国家的进口 推动经贸合作潜力再释放](/articles/reuters/1036764.md)
-
-6-17 [全球最大猪肉加工商万洲国际称免去万洪建董事职务 因对公司财物作不当攻击](/articles/reuters/1036765.md)
-
-6-17 [欧央行首席经济学家为9月会议预期降温 称讨论结束PEPP过早](/articles/reuters/1036766.md)
-
-6-17 [中国天赐材料宣布投建锂电新材料项目 称总投资10.5亿可年获净利逾5亿](/articles/reuters/1036767.md)
 
