--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-25 [美参议员呼吁拜登就《苹果日报》停刊实施制裁](/articles/voa/1039899.md)
+
 6-25 [研究认为首宗COVID-19病例或早于官方说法](/articles/voa/1039900.md)
 
 6-25 [美参院外委会通过法案 禁止新疆强制劳动制品](/articles/voa/1039901.md)
@@ -598,6 +600,4 @@
 6-11 [国安法无所不在 香港加强电影审查](/articles/voa/1040197.md)
 
 6-11 [国家在“做梦” 人民却“躺平”，中共一大警讯？](/articles/voa/1040198.md)
-
-6-11 [在美受追捧的News Break 能否不受中国政府控制？](/articles/voa/1040199.md)
 
