--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-25 [布林肯喊话盟友：团结就是力量](/articles/dw/1041745.md)
+
 6-25 [中疾控专家：中国疫苗对Delta仍有效 但效果下降](/articles/dw/1041746.md)
 
 6-25 [印中紧张关系推动新德里加紧边区基建](/articles/dw/1041747.md)
@@ -598,6 +600,4 @@
 6-8 [简历“掺水”？总理候选人可不能这么干](/articles/dw/1042043.md)
 
 6-8 [中国“躺平族”都是怎么想的？](/articles/dw/1042044.md)
-
-6-8 [欧洲理事会主席：欧洲在中国面前并不天真](/articles/dw/1042045.md)
 
